adding route for ministry members
